--- a/index.html
+++ b/index.html
@@ -7,12 +7,15 @@
 
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
 
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+
     <title>Code Louisville Student Portfolio</title>
 
     <link href="https://fonts.googleapis.com/css?family=Cabin|Roboto:400,700|Roboto+Condensed:400,700" rel="stylesheet">
     
     <link rel="stylesheet" href="css/style.css">
     <link rel="icon" href="img/favicon.ico" type="image/x-icon">
+    <link rel="crabphoto" href="img/crabphoto.jpeg" type="image/crab on beach">
 
   </head>
 
@@ -50,8 +53,7 @@
     </section>
 
   
-    <section class="hero-container" id="hero">
-
+    <section class="hero-container" id="hero">   
         <div class="hero-content">
 
             <h1>You're Going to Hire Me.</h1>
@@ -68,7 +70,7 @@
 
         <div class="aboutme-content">
 
-            <img src="http://placekitten.com/600" alt="Profile Photo" class="aboutme-photo">
+            <img src="img/crabphoto.jpeg" alt="Profile Photo" class="aboutme-photo">
 
             <h2>About Me</h2>
 
@@ -114,6 +116,50 @@
 
         </main>
     
+    </section>
+
+    <section class="contact-container" id="contact">
+
+        <main class="contact-content">
+
+            <article class="contact-item">
+
+                <h4>Contact Me</h4>
+                <form action="http://www.example.com/review.php" method="get">
+                    <fieldset>
+                        <legend>Your Details:</legend>
+                        <label>Name: <input type="text" name="name" size="30" maxlength="100"></label><br />
+                        <label>Email: <input type="email" name="email" size="30" maxlength="100"></label><br />
+                    </fieldset><br />
+                    <fieldset>
+                        <legend>Your Review:</legend>
+                        <p>
+                            <label for="hear-about">How did you hear about me?</label>
+                            <select name="referrer" id="hear-about">
+                                <option value="google">Google</option>
+                                <option value="friend">Friend</option>
+                                <option value="advert">Advert</option>
+                                <option value="other">Other</option>
+                            </select>
+                        </p>
+                        <p>
+                            Would you be interested in recieving updates from me?<br />
+                            <label><input type="radio" name="rating" value="yes" /> Yes</label>
+                            <label><input type="radio" name="rating" value="no" /> No</label>
+                        </p>
+                        <p>
+                            <label for="comments">Comments:</label><br />
+                            <textarea rows="4" cols="40" id="comments"></textarea>
+                        </p>
+                        <label><input type="checkbox" name="subscribe" checked="checked" /> Sign me up for email updates</label><br />
+                        <input type="submit" value="Submit review" />
+                    </fieldset>
+                </form>
+
+    </article>
+
+    </main>
+
     </section>
 
     <section class="footer-container">
